# AwesomeEqF

./: .gitignore  CONTRIBUTING.md  GITHUB_PAGES_SETUP.md  README.md  _config.yml  _config_dev.yml  blog.md  index.md  myst.yml  notebooks.md  papers.md  pyproject.toml  requirements.txt  theme.css
.github/: copilot-instructions.md
.github/workflows/: deploy-book.yml  deploy.yml
_layouts/: default.html  post.html
_posts/: 2024-11-01-introduction-to-eqf.md  2024-11-15-understanding-iekf.md  2024-11-20-introduction-to-eqf.md  2024-12-02-welcome-to-awesomeeqf.md  2024-12-08-welcome-to-awesomeeqf.md  2025-12-03-introduction-to-eqf.md  2025-12-03-understanding-iekf.md  2025-12-03-welcome-to-awesomeeqf.md  2025-12-08-welcome-to-awesomeeqf.md  2025-12-10-understanding-iekf.md  2025-12-12-introduction-to-eqf.md
blog/: 2025-12-18-welcome.md  equivariant_filters.md
notebooks/: 01_abc_eqf_example_raw.py  01_intro_to_iekf.ipynb  02_equivariant_filter_basics.ipynb  02_eqvio_example.ipynb  02_eqvio_example_raw.py  02_intro_to_eqf.ipynb  03_vio_with_iekf.ipynb  04_vio_with_eqf.ipynb  requirements.txt
