[project]
name = "awesomeeqf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gtsam-develop>=4.3a1.dev202605012141",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "jupyter-book>=2.1.0",
    "matplotlib>=3.4.0",
    "notebook>=6.4.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]
